use separate config file for backend to get rid of terraform warnings

--- a/backup/Makefile
+++ b/backup/Makefile
@@ -1,7 +1,7 @@
 .PHONY: init apply plan
 
 init:
-	terraform init -backend-config=config.tfvars
+	terraform init -backend-config=backend.tfvars
 
 plan:
 	terraform plan -var-file=config.tfvars
