--- a/mailserver/ansible/Vagrantfile
+++ b/mailserver/ansible/Vagrantfile
@@ -5,7 +5,9 @@ Vagrant.configure(2) do |config|
   config.vm.box = "ubuntu/bionic64"
 
   config.vm.provision "ansible" do |ansible|
+    ansible.limit = "all"
     ansible.verbose = "v"
     ansible.playbook = "mailserver.yml"
+    ansible.ask_vault_pass = true
   end
 end
